Fixing #166 showed a deeper rooted issue with line number handling introduced with repetier/sdcard/gcodestreaming
 Something like three wrongs led to one right. Core issue (not starting with line 0 but line 1 and not using the current line but the current line from the gcode file being sent, regardless of reset by M110) should now be rooted out.

Conflicts:
	octoprint/util/__init__.py
	octoprint/util/comm.py

--- a/octoprint/templates/settings.jinja2
+++ b/octoprint/templates/settings.jinja2
@@ -130,6 +130,13 @@
                         <div class="control-group">
                             <div class="controls">
                                 <label class="checkbox">
+                                    <input type="checkbox" data-bind="checked: feature_grbl" id="settings-featureGrbl"> Grbl firmware (CNC machines)
+                                </label>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="controls">
+                                <label class="checkbox">
                                     <input type="checkbox" data-bind="checked: feature_alwaysSendChecksum" id="settings-featureAlwaysSendChecksum"> Send a checksum with <strong>every</strong> command  <span class="label">Repetier</span>
                                 </label>
                             </div>
