--- a/octoprint/templates/index.jinja2
+++ b/octoprint/templates/index.jinja2
@@ -229,15 +229,20 @@
 
                 <div class="span8 tabbable">
                     <ul class="nav nav-tabs" id="tabs">
-                        <li class="active"><a href="#temp" data-toggle="tab">Temperature</a></li>
-                        <li><a href="#control" data-toggle="tab">Control</a></li>
+                        {% if not grblEnabled %}<li class="active"><a href="#temp" data-toggle="tab">Temperature</a></li>
+						<li><a href="#control" data-toggle="tab">Control</a></li>
+						{% else %} 
+						<li class="active"><a href="#control" data-toggle="tab">Control</a></li>
+						{% endif %}
                         {% if enableGCodeVisualizer %}<li><a href="#gcode" data-toggle="tab">GCode Viewer</a></li>{% endif %}
                         <li><a href="#term" data-toggle="tab">Terminal</a></li>
                         {% if enableTimelapse %}<li><a href="#timelapse" data-toggle="tab">Timelapse</a></li>{% endif %}
                     </ul>
 
                     <div class="tab-content">
-                        <div class="tab-pane active" id="temp">
+                        {% if grblEnabled %}<div class="tab-pane" id="temp">
+                        {% else %}<div class="tab-pane active" id="temp">
+						{% endif %}
                             <div class="row" style="padding-left: 20px">
                                 <div id="temperature-graph"></div>
                             </div>
@@ -308,7 +313,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tab-pane" id="control">
+						{% if grblEnabled %}<div class="tab-pane active" id="control">
+                        {% else %}<div class="tab-pane" id="control">
+						{% endif %}
                             {% if webcamStream %}
                             <div id="webcam_container">
                                 <img id="webcam_image" src="{{ webcamStream }}" data-bind="css: { flipH: settings.webcam_flipH(), flipV: settings.webcam_flipV() }">
@@ -354,6 +361,7 @@
                                     </div>
                                 </div>
                             </div>
+							{% if not grblEnabled %}
                             <!-- Extrusion control panel -->
                             <div class="jog-panel" style="display: none;" data-bind="visible: loginState.isUser">
                                 <h1>E</h1>
@@ -366,6 +374,7 @@
                                     <button class="btn control-box" data-bind="enable: isOperational() && !isPrinting() && loginState.isUser(), click: function() { $root.sendRetractCommand() }">Retract</button>
                                 </div>
                             </div>
+							{% endif %}
                             <!-- General control panel -->
                             <div class="jog-panel" style="display: none;" data-bind="visible: loginState.isUser">
                                 <h1>General</h1>
@@ -373,6 +382,7 @@
                                     <button class="btn control-box" data-bind="enable: isOperational() && !isPrinting() && loginState.isUser(), click: function() { $root.sendCustomCommand({type:'command',command:'M18'}) }"><i class="icon-off"></i>&nbsp;Motors off</button>
                                     <button class="btn control-box" data-bind="enable: isOperational() && loginState.isUser(), click: function() { $root.sendCustomCommand({type:'command',command:'M106'}) }">Fans on</button>
                                     <button class="btn control-box" data-bind="enable: isOperational() && loginState.isUser(), click: function() { $root.sendCustomCommand({type:'command',command:'M106 S0'}) }">Fans off</button>
+                                    <button class="btn control-box" data-bind="enable: isOperational() && loginState.isUser(), click: function() { $root.sendCustomCommand({type:'command',command:'M92 X0 Y0 Z0'}) }">Reset home position</button>
                                 </div>
                             </div>
 
